# algo-trading

./: pyproject.toml
src/: probabilistic-alpha-engine.py
